samples/_failures_safe/1761258622_864b7f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_27f0e72d.c: In function ‘get_next_token’:
./samples/SAFE/__tmp_27f0e72d.c:180:21: error: expected ‘;’ at end of input
  180 |         return token
      |                     ^
      |                     ;
./samples/SAFE/__tmp_27f0e72d.c:180:9: error: expected declaration or statement at end of input
  180 |         return token
      |         ^~~~~~
./samples/SAFE/__tmp_27f0e72d.c:180:9: error: expected declaration or statement at end of input
